--- a/app/index.html
+++ b/app/index.html
@@ -6,24 +6,23 @@
   <meta name="theme-color" content="#0b1220" />
   <title>RControl Factory</title>
 
-  <!-- ABSOLUTO: evita quebrar se abrir pelo / ou pelo /app/ -->
-  <link rel="manifest" href="/app/manifest.json" />
-  <link rel="icon" href="/app/icon-192.png" />
-  <link rel="stylesheet" href="/app/styles.css" />
+  <!-- RELATIVO (porque este arquivo fica em /app/) -->
+  <link rel="manifest" href="manifest.json" />
+  <link rel="icon" href="icon-192.png" />
+  <link rel="stylesheet" href="styles.css" />
 
-  <!-- iOS nicer -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
   <style>
-    /* FIX iOS: checkbox/label clicável */
-    label[for] { cursor: pointer; }
+    /* FIX iOS: checkbox clicável */
+    label[for]{ cursor:pointer; }
     input[type="checkbox"]{
-      width: 22px; height: 22px;
-      accent-color: #22c55e;
-      -webkit-tap-highlight-color: transparent;
+      width:22px; height:22px;
+      accent-color:#22c55e;
+      -webkit-tap-highlight-color:transparent;
     }
-    .rcf-clickfix { pointer-events: auto !important; }
+    .rcf-clickfix{ pointer-events:auto !important; }
   </style>
 </head>
 
@@ -64,7 +63,6 @@
         <div class="card">
           <h1>Bem-vindo 👋</h1>
           <p class="hint">Crie apps e publique depois (primeiro vamos estabilizar).</p>
-
           <div class="row">
             <button class="btn" id="btnNewAppQuick" type="button">+ Criar novo app</button>
             <button class="btn" id="btnOpenEditor" type="button">Abrir Editor</button>
@@ -82,7 +80,6 @@
         <div class="card">
           <h2>Novo App</h2>
           <p class="hint">Crie um app (nome + slug). Depois você vai para o Editor.</p>
-
           <div class="row">
             <input id="newAppName" class="input" placeholder="Nome (ex: MeuApp)" />
             <input id="newAppSlug" class="input" placeholder="Slug (ex: meuapp)" />
@@ -91,7 +88,6 @@
             <button id="btnCreateApp" class="btn primary" type="button">Criar</button>
             <button id="btnGenSlug" class="btn" type="button">Gerar slug</button>
           </div>
-
           <pre id="newAppOut" class="mono small">Pronto.</pre>
         </div>
       </section>
@@ -100,16 +96,13 @@
         <div class="card">
           <h2>Editor</h2>
           <p class="hint">Edite arquivos do app ativo e salve.</p>
-
           <div id="editorTop" class="row">
             <select id="fileSelect" class="input"></select>
             <button id="btnSaveFile" class="btn ok" type="button">Salvar</button>
             <button id="btnReloadFiles" class="btn" type="button">Recarregar</button>
           </div>
-
           <textarea id="fileEditor" class="textarea mono" spellcheck="false"
             placeholder="Selecione um app para ver arquivos."></textarea>
-
           <pre id="editorOut" class="mono small">Pronto.</pre>
         </div>
       </section>
@@ -150,44 +143,37 @@
         <div class="card">
           <h2>Admin</h2>
           <p class="hint">Diagnóstico / manutenção / self-update.</p>
-
           <div class="row">
             <button id="btnDiagnose" class="btn" type="button">Diagnosticar</button>
             <button id="btnResetSafe" class="btn danger" type="button">Zerar (safe)</button>
           </div>
-
           <pre id="adminOut" class="mono small">Pronto.</pre>
         </div>
       </section>
     </main>
   </div>
 
-  <!-- SW: ÚNICO é /app/sw.js -->
+  <!-- SW: único é app/sw.js (registrado a partir do /app/) -->
   <script>
     (function(){
-      if (!("serviceWorker" in navigator)) return;
-      window.addEventListener("load", async () => {
-        try {
-          const reg = await navigator.serviceWorker.register("/app/sw.js", { scope: "/app/" });
-          reg.update?.();
-        } catch (e) {
-          console.warn("SW register falhou:", e);
-        }
+      if (!('serviceWorker' in navigator)) return;
+      window.addEventListener('load', function(){
+        navigator.serviceWorker.register('./sw.js', { scope: './' }).catch(function(){});
       });
     })();
   </script>
 
-  <!-- CORE (ordem importa) -->
-  <script defer src="/app/app.js"></script>
+  <!-- CORE -->
+  <script defer src="app.js"></script>
 
-  <!-- CORE modules (precisam existir em /app/js/core/) -->
-  <script defer src="/app/js/core/vfs_overrides.js"></script>
-  <script defer src="/app/js/core/thompson.js"></script>
-  <script defer src="/app/js/core/github_sync.js"></script>
-  <script defer src="/app/js/core/mother_selfupdate.js"></script>
+  <!-- CORE modules -->
+  <script defer src="js/core/vfs_overrides.js"></script>
+  <script defer src="js/core/thompson.js"></script>
+  <script defer src="js/core/github_sync.js"></script>
+  <script defer src="js/core/mother_selfupdate.js"></script>
 
   <!-- UI layer -->
-  <script defer src="/app/js/router.js"></script>
-  <script defer src="/app/js/admin.js"></script>
+  <script defer src="js/router.js"></script>
+  <script defer src="js/admin.js"></script>
 </body>
 </html>
