--- a/app/index.html
+++ b/app/index.html
@@ -175,5 +175,7 @@
   <!-- UI layer -->
   <script defer src="js/router.js"></script>
   <script defer src="js/admin.js"></script>
-</body>
+<div style="padding:20px;font-size:22px;color:#00ff88;background:#001b12">
+  INDEX OK ✅ (versão TESTE 999)
+</div></body>
 </html>
