--- a/app/index.html
+++ b/app/index.html
@@ -183,7 +183,7 @@
 
   <!-- UI layer -->
   <script defer src="js/router.js?v=999"></script>
-  <script defer src="js/ui.gear.js?v=999"></script>
+  <script defer src="js/ui.gear.js"></script>
   <script defer src="js/admin.js?v=999"></script>
 </body>
 </html>
