--- a/app/index.html
+++ b/app/index.html
@@ -6,23 +6,14 @@
   <meta name="theme-color" content="#0b1220" />
   <title>RControl Factory</title>
 
-  <!-- Tudo RELATIVO (porque no Pages seu publish tá como /app virando root) -->
+  <!-- TUDO RELATIVO (porque este arquivo é /app/index.html) -->
   <link rel="manifest" href="manifest.json" />
   <link rel="icon" href="icon-192.png" />
-  <link rel="stylesheet" href="styles.css?v=999" />
+  <link rel="stylesheet" href="styles.css" />
 
-  <!-- iOS -->
+  <!-- iOS nicer -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-
-  <style>
-    /* iOS: deixa checkbox/label clicável + evita highlight */
-    label { cursor: pointer; }
-    input[type="checkbox"]{
-      width:22px;height:22px;
-      -webkit-tap-highlight-color: transparent;
-    }
-  </style>
 </head>
 
 <body>
@@ -41,7 +32,7 @@
 
       <div class="right">
         <div id="statusText" class="pill">OK ✅</div>
-        <button id="btnGear" class="iconbtn" type="button" aria-label="Settings">⚙️</button>
+        <!-- REMOVIDO: engrenagem (dava bug de toque no iOS) -->
       </div>
     </header>
 
@@ -58,6 +49,8 @@
 
     <!-- VIEWS -->
     <main class="views">
+
+      <!-- DASHBOARD -->
       <section id="view-dashboard" class="view">
         <div class="card">
           <h1>Bem-vindo 👋</h1>
@@ -76,6 +69,7 @@
         </div>
       </section>
 
+      <!-- NEW APP -->
       <section id="view-newapp" class="view">
         <div class="card">
           <h2>Novo App</h2>
@@ -94,6 +88,7 @@
         </div>
       </section>
 
+      <!-- EDITOR -->
       <section id="view-editor" class="view">
         <div class="card">
           <h2>Editor</h2>
@@ -112,6 +107,7 @@
         </div>
       </section>
 
+      <!-- GENERATOR -->
       <section id="view-generator" class="view">
         <div class="card">
           <h2>Generator</h2>
@@ -123,6 +119,7 @@
         </div>
       </section>
 
+      <!-- AGENT -->
       <section id="view-agent" class="view">
         <div class="card">
           <h2>Agente</h2>
@@ -136,14 +133,73 @@
         </div>
       </section>
 
+      <!-- SETTINGS (CENTRAL DE CONFIG) -->
       <section id="view-settings" class="view">
         <div class="card">
           <h2>Settings</h2>
-          <p class="hint">Configurações locais.</p>
+          <p class="hint">Central de configurações (sem engrenagem).</p>
           <pre id="settingsOut" class="mono small">Pronto.</pre>
+        </div>
+
+        <!-- GITHUB SYNC (SAFE) -->
+        <div class="card">
+          <h2>GitHub Sync (Privado) — SAFE</h2>
+          <p class="hint">Puxa/empurra o bundle no seu repo privado. Assim você atualiza em um aparelho e puxa no outro.</p>
+
+          <div class="row">
+            <input id="ghOwner" class="input" placeholder="owner (ex: rcontrol-factory)" />
+            <input id="ghRepo" class="input" placeholder="repo (ex: rcontrol-factory)" />
+          </div>
+
+          <div class="row">
+            <input id="ghBranch" class="input" value="main" placeholder="branch (ex: main)" />
+            <input id="ghPath" class="input" value="app/import/mother_bundle.json" placeholder="path (ex: app/import/mother_bundle.json)" />
+          </div>
+
+          <div class="row">
+            <input id="ghToken" class="input" placeholder="TOKEN (PAT) — contents:read/write" />
+            <button id="btnGhSave" class="btn" type="button">Salvar config</button>
+          </div>
+
+          <div class="row">
+            <button id="btnGhPull" class="btn" type="button">⬇️ Pull (baixar do GitHub)</button>
+            <button id="btnGhPush" class="btn ok" type="button">⬆️ Push (enviar p/ GitHub)</button>
+            <button id="btnGhUpdateNow" class="btn primary" type="button">⚡ Atualizar agora</button>
+          </div>
+
+          <pre id="ghOut" class="mono small">Pronto.</pre>
+        </div>
+
+        <!-- SEGURANÇA (PIN) -->
+        <div class="card">
+          <h2>Segurança</h2>
+          <p class="hint">Define um PIN para liberar ações críticas no Admin (recomendado).</p>
+
+          <div class="row">
+            <input id="adminPin" class="input" placeholder="Definir PIN (4-8 dígitos)" inputmode="numeric" />
+            <button id="btnSetPin" class="btn primary" type="button">Salvar PIN</button>
+            <button id="btnClearPin" class="btn danger" type="button">Remover PIN</button>
+          </div>
+
+          <pre id="secOut" class="mono small">Pronto.</pre>
+        </div>
+
+        <!-- DIAG / LOGS -->
+        <div class="card">
+          <h2>Diag / Logs</h2>
+          <p class="hint">Atalhos rápidos (o Admin continua com ações críticas).</p>
+
+          <div class="row">
+            <button id="btnRunDiag" class="btn" type="button">Diagnosticar</button>
+            <button id="btnOpenAdmin" class="btn" type="button">Abrir Admin</button>
+            <button id="btnClearLogs2" class="btn danger" type="button">Limpar logs</button>
+          </div>
+
+          <pre id="diagOut" class="mono small">Pronto.</pre>
         </div>
       </section>
 
+      <!-- ADMIN -->
       <section id="view-admin" class="view">
         <div class="card">
           <h2>Admin</h2>
@@ -157,33 +213,43 @@
           <pre id="adminOut" class="mono small">Pronto.</pre>
         </div>
       </section>
+
     </main>
   </div>
 
-  <!-- SW register: ÚNICO SW é ./sw.js (dentro de /app) -->
+  <!-- SW (único): /app/sw.js com scope /app/ -->
   <script>
     (function(){
-      if (!('serviceWorker' in navigator)) return;
-      window.addEventListener('load', function(){
-        navigator.serviceWorker.register('./sw.js', { scope: './' })
-          .then(function(reg){ try{ reg.update && reg.update(); }catch(e){} })
-          .catch(function(){});
+      if (!("serviceWorker" in navigator)) return;
+      window.addEventListener("load", async () => {
+        try {
+          const reg = await navigator.serviceWorker.register("./sw.js", { scope: "./" });
+          reg.update?.();
+        } catch (e) {
+          console.warn("SW register falhou:", e);
+        }
       });
     })();
   </script>
 
-  <!-- CORE -->
-  <script defer src="app.js?v=999"></script>
+  <!-- CORE (ordem importa) -->
+  <script defer src="app.js"></script>
 
-  <!-- CORE modules -->
-  <script defer src="js/core/vfs_overrides.js?v=999"></script>
-  <script defer src="js/core/thompson.js?v=999"></script>
-  <script defer src="js/core/github_sync.js?v=999"></script>
-  <script defer src="js/core/mother_selfupdate.js?v=999"></script>
+  <!-- CORE modules (precisam existir em /app/js/core/) -->
+  <script defer src="js/core/vfs_overrides.js"></script>
+  <script defer src="js/core/thompson.js"></script>
+  <script defer src="js/core/github_sync.js"></script>
+  <script defer src="js/core/mother_selfupdate.js"></script>
 
   <!-- UI layer -->
-  <script defer src="js/router.js?v=999"></script>
-  <script defer src="js/ui.gear.js"></script>
-  <script defer src="js/admin.js?v=999"></script>
+  <script defer src="js/router.js"></script>
+  <script defer src="js/admin.js"></script>
+
+  <!-- Settings controller (novo) -->
+  <script defer src="js/settings.js"></script>
+
+  <!-- Agent (se existir) -->
+  <script defer src="js/agent.router.js"></script>
+  <script defer src="js/agent.nlp.js"></script>
 </body>
 </html>
